--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/poppins": "^5.2.5",
     "@hugeicons/react": "^1.0.5",
     "@tailwindcss/vite": "^4.0.15",
+    "lucide-react": "^0.544.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.15"
@@ -28,6 +29,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
